# ada-search

./: .gitignore  Makefile  Makefile.conf.in  README.md  alire.toml  configure  configure.ac  coverage.sh  samples.gpr  search.gpr  search.gpr.in  search_config.gpr  search_tests.gpr.in
db/mysql/: create-search-mysql.sql  drop-search-mysql.sql  search-drop-mysql.sql  search-mysql.sql
db/postgresql/: create-search-postgresql.sql  drop-search-postgresql.sql  search-drop-postgresql.sql  search-postgresql.sql
regtests/: alire.toml  search-fields-tests.adb  search-fields-tests.ads  search-testsuite.adb  search-testsuite.ads  search-tokens-tests.adb  search_harness.adb  search_tests.gpr
samples/: finder.adb  indexer.adb
src/: search-analyzers-french.adb  search-analyzers-french.ads  search-analyzers.adb  search-analyzers.ads  search-documents.adb  search-documents.ads  search-fields-vectors.ads  search-fields.adb  search-fields.ads  search-filters-lowercase.adb  search-filters-lowercase.ads  search-filters-stemmers.adb  search-filters-stemmers.ads  search-filters.adb  search-filters.ads  search-indexers-databases.adb  search-indexers-databases.ads  search-indexers.adb  search-indexers.ads  search-positions.adb  search-positions.ads  search-results.ads  search-tokenizers.adb  search-tokenizers.ads  search-tokens-compare.adb  search-tokens-compare.ads  search-tokens-factories-default.adb  search-tokens-factories-default.ads  search-tokens-factories.ads  search-tokens-sets.ads  search-tokens-vectors.ads  search-tokens.adb  search-tokens.ads  search.ads
uml/: search.zargo
(+11 files in other folders)
